# langchainlearnings

./: .gitignore  pyproject.toml
1_chat_models/: 1_chat_model_basic.py  2_chat_model_basic_conversation.py  3_realtime_conversation.py  4_chat_history_cloud.py
2_prompt_template/: 1_promptbasic.py  2_withchatmodel.py
3_chain/: 1_chainbasic.py  2_chain_underthehood.py  3_chainextend.py  4_chainparallel.py  5_chainbranch.py
4_rag/: 1_ragbasic.py  1b_question.py  2a_metadata.py  2b_metadata.py  2c_recursivesplit.py  3_textsplit_deepdive.py  4_embedding_deepdive.py  5_retrival_deep.py  6_ragqueston.py  7_ragconversation.py
5_gdriverag/: 1_main.py
ratemyprof/: README.md  package-lock.json  package.json  pyproject.toml  review.json
ratemyprof/pythonscripts/: main.py
